<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">WorkPet</string>
    <string name="tasks">Tasks</string>
    <string name="save">Save</string>
    <string name="new_task">New Task</string>
    <string name="taskTitle1">Jogging</string>
    <string name="taskTitle2">Faire le ménage</string>
    <string name="taskTitle3">Faire les courses</string>
    <string name="taskDate1">Deadline : 18/03/2023</string>
    <string name="taskDate2">Deadline : 19/03/2023</string>
    <string name="taskDesc1">1h dans les bois</string>
    <string name="taskDesc2">Ne pas oublier les croquettes pour chat</string>
    <string name="taskReward1">Reward : 10 xp, 10 gold</string>
    <string name="taskReward2">Reward : 5 xp, 10 gold</string>
    <string name="empty" />
    <string name="day_tasks">This day\'s tasks</string>
    <string name="back">Back</string>
    <string name="add_a_task">Add a task</string>
    <string name="close">Close</string>
    <string name="edit_a_task">Edit a task</string>
    <string name="tasks_done">Tasks Done</string>
    <string name="validate_task">validate task</string>
    <string name="modify_task">modify task</string>
    <string name="delete_task">delete task</string>
    <string name="difficulty">Difficulty :</string>
    <string name="mode">Mode :</string>
    <string name="deadline">Deadline :</string>
    <string name="task_description">Task description</string>
    <string name="description">Description :</string>
    <string name="task_title">Task title</string>
    <string name="title">Title :</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="choose_the_difficulty">Choose the difficulty</string>
    <string name="frequency">Frequency</string>
    <string name="choose_a_frequency">Choose a frequency</string>
    <string name="task_date">Task Date</string>
    <string name="task_reward">Task Reward</string>

    <string-array name="difficulty_array">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Very Hard</item>
    </string-array>

    <string-array name="mode_array">
        <item>Once</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>

    <string name="aboutus">
    \nWorkPet is a task planning application developed by WorkThruTheWeak (WTTW) Studio.
    \nThis application exists for our "Mobile App Programming" project.
    \n\nAre you having a hard time with you daily task? Is it hard to stay motivated and do what you need to do ?
    \n\nWorkPet is here for that purpose !\n We aim to make you enjoy doing tasks by going with a game-like approach.
    \n\nComplete your mission, win coins, raise your pet! Simple, right?\n\n\n
    </string>

</resources>