<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="152dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/back2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="32dp"
                android:text="@string/back"
                app:layout_constraintBottom_toTopOf="@+id/TaskTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/TaskTitle"
                android:layout_width="39dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="20dp"
                android:text="@string/title"
                app:layout_constraintBottom_toTopOf="@+id/TitleInputField"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/back2" />

            <EditText
                android:id="@+id/TitleInputField"
                android:layout_width="240dp"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/task_title"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/TaskDesc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TaskTitle" />

            <TextView
                android:id="@+id/TaskDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="20dp"
                android:text="@string/description"
                app:layout_constraintBottom_toTopOf="@+id/DescInputField"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TitleInputField" />

            <EditText
                android:id="@+id/DescInputField"
                android:layout_width="240dp"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/task_description"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/taskDeadline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TaskDesc" />

            <TextView
                android:id="@+id/taskDeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="16dp"
                android:text="@string/deadline"
                app:layout_constraintBottom_toTopOf="@+id/Datebutton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/DescInputField" />


            <TextView
                android:id="@+id/taskFrequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="16dp"
                android:text="@string/frequency"
                app:layout_constraintBottom_toTopOf="@+id/mode_spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Timebutton" />

            <TextView
                android:id="@+id/taskDifficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="16dp"
                android:text="@string/difficulty"
                app:layout_constraintBottom_toTopOf="@+id/difficulty_spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mode_spinner" />

            <Button
                android:id="@+id/Datebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/select_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.462"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/taskDeadline" />

            <Button
                android:id="@+id/Timebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="372dp"
                android:layout_marginBottom="32dp"
                android:text="@string/select_time"
                app:layout_constraintBottom_toTopOf="@+id/mode_spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.458"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/difficulty_spinner"
                android:layout_width="240dp"
                android:layout_height="48dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:hint="@string/choose_the_difficulty"
                app:layout_constraintBottom_toTopOf="@+id/ModifyButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mode_spinner"
                app:layout_constraintVertical_bias="1.0" />

            <Spinner
                android:id="@+id/mode_spinner"
                android:layout_width="240dp"
                android:layout_height="48dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:hint="@string/choose_a_frequency"
                app:layout_constraintBottom_toTopOf="@+id/difficulty_spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Timebutton" />

            <Button
                android:id="@+id/ModifyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>